--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/android-icon-36x36.ico" type="image/x-icon">
-    <title>Desafío 1</title>
+    <title>Desafío 1 Paulina</title>
 </head>
 
 <body>
