Update portafolio.html 2

--- a/portafolio.html
+++ b/portafolio.html
@@ -15,7 +15,7 @@
         <tr>
             <td>Proyecto Curriculum </td>
             <td>
-                <img src="img/cv.jpg" alt="Captura Curriculum">
+                <img src="assets/img/cv.jpg" alt="Captura Curriculum">
             </td>
         </tr>
         <tr>
