--- a/portafolio.html
+++ b/portafolio.html
@@ -15,6 +15,7 @@
         <tr>
             <td>Proyecto Curriculum </td>
             <td>
+                <!-- ruta de foto-->
                 <img src="assets/img/cv.jpg" alt="Captura Curriculum">
             </td>
         </tr>
